# xaml

./: .gitignore  CMakeLists.txt  make.cmd  makefile  readme.md
res/: license.rtf  version.h.in
src/: main.cpp  main.hpp  main.manifest  main.rc  main.xaml
